# ESP32-IoT-Control-and-Monitor-System

./: CMakeLists.txt
Components/demo/: CMakeLists.txt
Components/objects/: CMakeLists.txt  devices.h  rooms.cpp  sensors.h  wrapper.cpp  wrapper.h
main/: CMakeLists.txt  component.mk  control_task.c  control_task.h  main.c  main.h  my_data.h  priorities.h
main/certs/: certificate.pem.crt  private.pem.key
main/certs/Temp/: Public_key.key
